fix: sticky audio player in left margin
Wrapped player content in .listen-inner so there's a single
sticky element instead of each child sticking independently
and overlapping on scroll. Added height: 100% to .listen so
the sticky wrapper has scroll space within the absolute
container.

--- a/static/style.css
+++ b/static/style.css
@@ -704,11 +704,12 @@ sup a {
   position: absolute;
   right: 100%;
   top: 0;
+  height: 100%;
   margin-right: 2rem;
   width: 14rem;
 }
 
-.listen>* {
+.listen-inner {
   position: sticky;
   top: 2rem;
 }
@@ -910,7 +911,7 @@ img {
     padding: 0.75rem 1rem;
   }
 
-  .listen>* {
+  .listen-inner {
     position: static;
   }
 
